# myFastAPI

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  README.md  init_repo  pyproject.toml
app/: app.py  config.json
app/core/: logging.py
