[tool.poetry]
name = "FastAPI template"
version = "0.1"
description = "FastAPI template"

authors = [
    "Samuel Stegmeyer <samuel.stegmeyer@***.com"
]

readme = 'README.md'

repository = "https://github.com/CommonCrisis/myFastAPI"

[tool.poetry.dependencies]
python = "~3.7"
APScheduler = "3.6.3"
email-validator = "1.0"
fastapi = "^0.61.2"
pymysql = "0.9.3"
python-dotenv = "0.10.3"
sqlalchemy = "^1.3.20"
uvicorn = "^0.12.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
pre-commit = "^2.7.1"
pylint = "^2.4.1"
pytest = "^5.2.1"
pytest-custom_exit_code = "0.3.0"
autoflake = "^1.3.1"
taskipy = "^1.1.3"

[tool.black]
line-length = 140
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
hooks = "pre-commit install && pre-commit install -t pre-push && pre-commit install -t post-commit"
test = "python -m pytest app/tests/test_*.py"
bandit = "bandit -r --ini .bandit -i"
